<resources>
    <string name="app_name">BuPazar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appName">BuPazar!</string>
    <string name="username">E-mail Address</string>
    <string name="username_hint">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="search">Search</string>

    <string name="higlights"><u><b>HIGHLIGHTS</b></u></string>
    <string name="Wishlist"><u>Add to Wishlist</u></string>
    <string name="Share"><u>Share</u></string>
    <string name="price"><b>$ price</b></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
    <string name="categories">Categories</string>
    <string name="fashion">Fashion</string>
    <string name="electronics">Electronics</string>
    <string name="personal">Personal</string>
    <string name="home_amp_kitchen"><![CDATA[Home & Kitchen]]></string>
    <string name="sports_outdoors"><![CDATA[Sports & Outdoors]]></string>
    <string name="hobbies"><![CDATA[Hobbies]]></string>
    <string name="phone">Cell Phones</string>
    <string name="computer">Computers</string>
    <string name="whiteAppliances">White Appliances</string>
    <string name="cameras">Cameras</string>
    <string name="television_amp_video"><![CDATA[Television & Video]]></string>
    <string name="gps_navigation"><![CDATA[GPS & Navigation]]></string>
    <string name="car_vehicle_electronics"><![CDATA[Car & Vehicle Electronics]]></string>
    <string name="videogame_consoles_accessories"><![CDATA[Video Game Consoles]]></string>
    <string name="shoes_amp_bags"><![CDATA[Shoes & Bags]]></string>
    <string name="man_clothing">Man Clothing</string>
    <string name="sportswear">Sportswear</string>
    <string name="accessory">Accessory</string>
    <string name="woman_clothing">Woman Clothing</string>
    <string name="hair_care">Hair Care</string>
    <string name="oral_care">Oral Care</string>
    <string name="skin_care">Skin Care</string>
    <string name="makeup">Makeup</string>
    <string name="perfume">Perfume</string>
    <string name="fitness">Fitness</string>
    <string name="sport_clothing">Sport Clothing</string>
    <string name="book_magazine"><![CDATA[Book & Magazine]]></string>
    <string name="films">Films</string>
    <string name="office_furniture">Office Furniture</string>
    <string name="decoration">Decoration</string>
    <string name="beds">Beds</string>
    <string name="kitchenware">Kitchenware</string>
    <string name="furniture">Furniture</string>
    <string name="art">Art</string>
    <string name="pc_amp_tablet"><![CDATA[PC & Tablet]]></string>
    <string name="smartphone">Smartphone</string>
    <string name="game_amp_game_consoles"><![CDATA[Game & Game Console]]></string>
    <string name="product_name_const">product name</string>
    <string name="musical_instrument">Musical Instrument</string>
    <string name="personal_info">Personal Info</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="edit">EDIT</string>
    <string name="user_name">User Name</string>
    <string name="save">SAVE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password (Again)</string>
    <string name="type_your_new_password_again">Type your new password again</string>
    <string name="type_your_new_password">Type your new password</string>
    <string name="type_your_current_password">Type your current password</string>
    <string name="change_password_lower">Change Password</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="please_enter_verification_number">Please enter verification number</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment_and_rate">Comment and Rate</string>
    <string name="comment">Comment</string>
    <string name="rate">Rate</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="first_name">First Name</string>
    <string name="customer">Customer</string>
    <string name="vendor">Vendor</string>


    <string name="previous_orders">Previous Orders</string>
    <string name="default_web_client_id">517640995797-en9ph1bng2bb99bo3k1v5p0b2cig69rb.apps.googleusercontent.com</string>
    <string name="show_all">Show All</string>
    <string name="product_image">product image</string>


    <string-array name="sports_images">
        <item>https://androidwave.com/media/images/img_baseball.jpg</item>
        <item>https://androidwave.com/media/images/img_badminton.jpg</item>
        <item>https://androidwave.com/media/images/img_basketball.jpg</item>
        <item>https://androidwave.com/media/images/img_bowling.jpg</item>
        <item>https://androidwave.com/media/images/img_cycling.jpg</item>
        <item>https://androidwave.com/media/images/img_golf.jpg</item>
        <item>https://androidwave.com/media/images/img_running.jpg</item>
        <item>https://androidwave.com/media/images/img_soccer.jpg</item>
        <item>https://androidwave.com/media/images/img_swimming.jpg</item>
        <item>https://androidwave.com/media/images/img_tabletennis.jpg</item>
        <item>https://androidwave.com/media/images/img_tennis.jpg</item>
    </string-array>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="sports_info">
        <item>Nike Enters 10-Year Partnership With Major League Baseball! </item>
        <item>Indonesia Masters – Saina Nehwal sails into semifinals PV Sindhu, Kidambi Srikanth lose in quarters!</item>
        <item>College Basketball 2018–19 Player of the Year Power Rankings Everyone is chasing Dukes Zion Williamson!</item>
        <item>Local bowler lands 132 perfect games, shares his secret for success!</item>
        <item>Sierra solos to win at womens Cadel Evans Great Ocean Road Race!</item>
        <item>Tiger Woods Friday live blog: Woods overcomes mid-round hiccup to make the cut at Torrey Pines!</item>
        <item>The 5km fun run was organised by Ironman England as part of its annual three-day triathlon festival in Bolton, Manchester in a bid to attract more female runners to the event!</item>
        <item>Soccer insider notes: Liverpool not the only Premier League club eyeing Weston McKennie!</item>
        <item>Chloe Grimme, a USA Swimming Scholastic All American from Land O Lakes, Florida, announced on social media that she has verbally committed to the University of Florida for 2020–21!</item>
        <item>Table Tennis Federation Revokes Soumyajit Ghoshs Suspension, 9 Months After Rape Allegations!</item>
        <item>2019 Australian Open odds, predictions for mens finals!</item>
    </string-array>

    <string-array name="product_images">
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2VZX0397KBcVYrj7K4vbhZHj6zPkMQPqpJw&amp;usqp=CAU</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMcHcX5QR0TaJ5hYUvuFno4lfDUksgI-gPMA&amp;usqp=CAU</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2OEdAAT2mRuuVS51rmNY8_08SfL5ZQ30DYQ&amp;usqp=CAU</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMpQ6N7pKsyd4spN9lOmD_ND7yqvD1-I1RNw&amp;usqp=CAU</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLpR0nohEuF5_KKNkvpZdGo6gI_gm9rPzdqw&amp;usqp=CAU</item>
    </string-array>

</resources>