<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/personalInfoMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangePasswordFragment">

    <RelativeLayout
        android:id="@+id/personalInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_blue"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/personalInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="4dp"
            android:text="@string/change_password_lower"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/personalCareImage"
            android:layout_width="69dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/personalInfoText"
            app:srcCompat="@drawable/ic_password" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personalInfoLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:id="@+id/passwordLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/secondary_blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:hint="@string/type_your_current_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/secondary_blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:hint="@string/type_your_new_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password_again"
                android:textColor="@color/secondary_blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:inputType="textPassword"
                android:hint="@string/type_your_new_password_again"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/updatePassword"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLayout"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/secondary_blue"
        android:text="@string/update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />


</RelativeLayout>