<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page.fragment.EditProfileInfoFragment">

    <RelativeLayout
        android:id="@+id/personalInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_blue"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/personalInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="4dp"
            android:text="@string/personal_info"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/personalCareImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="179dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@+id/personalInfoText"
            app:srcCompat="@drawable/ic_id_card" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bupazar_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalInfoLayout"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/secondary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textColor="@color/secondary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/secondary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textColor="@color/secondary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/secondary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonSave"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileInfo"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/secondary_blue"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileInfo" />

</RelativeLayout>